<resources>
    <string name="app_name">NewsHere</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="random_text">Random text</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="categories">Categories</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">NewsHere</string>
    <string name="desc_slide1">Worldwide headlines at the tip of your fingers</string>
    <string name="title_slide_4">Search the topic you want to read</string>
    <string name="desc_slide_4">Provides the option to sort the results and filter them through the dates of publication</string>
    <string name="title_slide3">Categories Headlines</string>
    <string name="desc_slide_3">Allows you to view headlines from your favorite category</string>
    <string name="title_slide_5">Offers Multilingual Support</string>
    <string name="desc_slide_5">Now view the news articles from all over the world in their own native language</string>
    <string name="title_slide_2">Current News Headlines</string>
    <string name="desc_slide_2">So that you never miss any updates on what\'s going around</string>
    <string name="rate_message">Would you please like to spare a moment to rate this app?</string>
    <string name="no_conn_error_message">There seems to be an issue with your internet connectivity</string>
    <string name="exit_message">Sure to exit ?</string>
    <string name="retrieve_error_msg">Couldn\'t reach servers at the moment</string>
    <string name="no_results_error_msg">Sorry no results found !!!</string>
    <string name="dev_logo">dev_logo</string>
    <string name="powered_by_newsapi_org">Powered by newsapi.org</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="loading">Loading</string>
    <string name="top_headlines">Top-Headlines</string>
    <string name="search">Search</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="aw_snap">Aw Snap !!!</string>
    <string name="refresh">Refresh</string>
    <string name="tdr">tdr</string>
    <string name="click_here_to_see_the_next_news">Click here to see the next news</string>
    <string name="tdl">tdl</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="published_at">Published At</string>
    <string name="done">done</string>
    <string name="cancel">Cancel</string>
    <string name="search_query">Search query …</string>
    <string name="page_1_20_of_43567">Page 1–20 of 43567</string>
    <string name="_3rd_nov_2018_9th_feb_2018">3rd Nov 2018 – 9th Feb 2018</string>
    <string name="nextpage">nextpage</string>
    <string name="sort">sort</string>
    <string name="filter">filter</string>
    <string name="india">india</string>
    <string name="textview">TextView</string>
    <string name="samplenews">samplenews</string>
    <string name="published_on">- published on</string>
    <string name="title">Title</string>
    <string name="author_s_name">- Author\'s Name</string>
    <string name="read_more">Read More</string>
    <string name="flag">flag</string>
    <string name="newshere">NewsHere</string>
    <string name="world_wide_news_at_your_fingertips">World Wide news at your fingertips</string>
    <string name="image">image</string>
</resources>
