<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.shaan.newshere.CategoryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/categories"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/country_dropdown_bg"
                android:gravity="center" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:tabMode="scrollable"
            app:tabTextAppearance="@style/my_tab_text">

            <android.support.design.widget.TabItem
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <android.support.design.widget.TabItem
                android:id="@+id/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment" />

            <android.support.design.widget.TabItem
                android:id="@+id/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general" />

            <android.support.design.widget.TabItem
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health" />

            <android.support.design.widget.TabItem
                android:id="@+id/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science" />

            <android.support.design.widget.TabItem
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <android.support.design.widget.TabItem
                android:id="@+id/technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_category" />


    <LinearLayout
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorShadow"
        android:gravity="center"
        android:orientation="vertical">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:elevation="200dp"
            android:visibility="visible"
            app:indicatorColor="@color/colorAccent2"
            app:indicatorName="LineScalePartyIndicator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="1"
            android:padding="15dp"
            android:text="@string/loading"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
