<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shaan.newshere.CategoryActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bPrev"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pager_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bPrev"
        app:layout_constraintRight_toLeftOf="@+id/bNext"
        app:layout_constraintTop_toTopOf="@+id/bPrev"/>

    <Button
        android:id="@+id/bPrev"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:background="@drawable/prev_bg"
        android:fontFamily="@font/roboto_light"
        android:text="@string/prev"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bNext"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:background="@drawable/next_bg"
        android:fontFamily="@font/roboto_light"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/errorContainer"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:elevation="100dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivError"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerInside"
            android:src="@drawable/error"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/retrieve_error_msg" />

        <TextView
            android:id="@+id/tvErrorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/aw_snap"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivError" />

        <TextView
            android:id="@+id/tvErrorDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:padding="5dp"
            android:text="@string/retrieve_error_msg"
            android:textColor="#eee"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvErrorTitle" />

        <ImageButton
            android:id="@+id/bRefresh"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/bg_refresh_ripple"
            android:fontFamily="@font/roboto_light"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_refresh"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvErrorDesc"
            android:contentDescription="@string/refresh" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
